@@ -1,8 +1,8 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.mockito.ArgumentCaptor;
+import org.mockito.Captor;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -11,33 +11,43 @@ import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.document.domain.Document;
+import uk.gov.hmcts.reform.fpl.enums.ActionType;
 import uk.gov.hmcts.reform.fpl.enums.DirectionAssignee;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.CaseManagementOrder;
-import uk.gov.hmcts.reform.fpl.model.HearingBooking;
+import uk.gov.hmcts.reform.fpl.model.Direction;
+import uk.gov.hmcts.reform.fpl.model.Directions;
 import uk.gov.hmcts.reform.fpl.model.OrderAction;
 import uk.gov.hmcts.reform.fpl.model.common.DocmosisDocument;
 import uk.gov.hmcts.reform.fpl.model.common.DocumentReference;
 import uk.gov.hmcts.reform.fpl.model.common.Element;
+import uk.gov.hmcts.reform.fpl.model.common.Recital;
+import uk.gov.hmcts.reform.fpl.model.common.Schedule;
 import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicList;
 import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicListElement;
-import uk.gov.hmcts.reform.fpl.service.DocmosisDocumentGeneratorService;
-import uk.gov.hmcts.reform.fpl.service.DraftCMOService;
+import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisCaseManagementOrder;
+import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisChild;
+import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisDirection;
+import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisHearingBooking;
+import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisJudgeAndLegalAdvisor;
+import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisRecital;
+import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisRepresentative;
+import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisRepresentedBy;
+import uk.gov.hmcts.reform.fpl.model.docmosis.DocmosisRespondent;
 import uk.gov.hmcts.reform.fpl.service.UploadDocumentService;
 import uk.gov.hmcts.reform.fpl.service.ccd.CoreCaseDataService;
+import uk.gov.hmcts.reform.fpl.service.docmosis.DocmosisDocumentGeneratorService;
 
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.time.format.FormatStyle;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
+import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static java.util.Collections.emptyMap;
+import static java.util.Collections.emptyList;
 import static java.util.UUID.fromString;
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
 import static org.mockito.ArgumentMatchers.any;
@@ -45,133 +55,124 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
 import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
-import static uk.gov.hmcts.reform.fpl.enums.CMOStatus.PARTIES_REVIEW;
 import static uk.gov.hmcts.reform.fpl.enums.CMOStatus.SELF_REVIEW;
 import static uk.gov.hmcts.reform.fpl.enums.CaseManagementOrderKeys.CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY;
 import static uk.gov.hmcts.reform.fpl.enums.CaseManagementOrderKeys.HEARING_DATE_LIST;
+import static uk.gov.hmcts.reform.fpl.enums.DirectionAssignee.ALL_PARTIES;
+import static uk.gov.hmcts.reform.fpl.service.HearingBookingService.HEARING_DETAILS_KEY;
 import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createCmoDirections;
-import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createElementCollection;
-import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createHearingBookings;
+import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createHearingBookingsFromInitialDate;
 import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createOthers;
 import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createRespondents;
 import static uk.gov.hmcts.reform.fpl.utils.CaseDataGeneratorHelper.createUnassignedDirection;
+import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.populatedCaseDetails;
+import static uk.gov.hmcts.reform.fpl.utils.DateFormatterHelper.formatLocalDateToString;
 import static uk.gov.hmcts.reform.fpl.utils.DocumentManagementStoreLoader.document;
+import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.wrapElements;
+import static uk.gov.hmcts.reform.fpl.utils.TestDataHelper.testDocmosisJudge;
+import static uk.gov.hmcts.reform.fpl.utils.TestDataHelper.testJudge;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(DraftCMOController.class)
 @OverrideAutoConfiguration(enabled = true)
-@SuppressWarnings("unchecked")
 class DraftCMOControllerTest extends AbstractControllerTest {
-    private static final long ID = 1L;
-    private static final LocalDateTime TODAYS_DATE = LocalDateTime.now();
-    private final List<Element<HearingBooking>> hearingDetails = createHearingBookings(TODAYS_DATE);
-    private final DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofLocalizedDate(
-        FormatStyle.MEDIUM).localizedBy(Locale.UK);
-
-    @Autowired
-    private DraftCMOService draftCMOService;
+    private static final long CASE_ID = 1L;
+    private static final String DRAFT_CMO_FILE_NAME = "draft-case-management-order.pdf";
 
     @MockBean
     private CoreCaseDataService coreCaseDataService;
 
     @MockBean
-    private DocmosisDocumentGeneratorService documentGeneratorService;
+    private DocmosisDocumentGeneratorService generatorService;
 
     @MockBean
-    private UploadDocumentService uploadDocumentService;
+    private UploadDocumentService uploadService;
+
+    @Captor
+    private ArgumentCaptor<DocmosisCaseManagementOrder> captor;
 
     DraftCMOControllerTest() {
         super("draft-cmo");
     }
 
     @Test
-    void aboutToStartCallbackShouldPrepareCaseForCMO() throws Exception {
-        Map<String, Object> data = ImmutableMap.of(
-            "hearingDetails", hearingDetails,
+    void aboutToStartCallbackShouldPrepareCaseForCMOWhenNoCaseManagementOrder() {
+        Map<String, Object> data = Map.of(
+            HEARING_DETAILS_KEY, createHearingBookingsFromInitialDate(now().minusDays(3)),
             "respondents1", createRespondents(),
             "others", createOthers());
 
-        List<String> expected = Arrays.asList(
-            TODAYS_DATE.plusDays(5).format(dateTimeFormatter),
-            TODAYS_DATE.plusDays(2).format(dateTimeFormatter));
+        List<String> expected = List.of(
+            formatLocalDateToString(dateNow().plusDays(2), FormatStyle.MEDIUM),
+            formatLocalDateToString(dateNow().minusDays(1), FormatStyle.MEDIUM),
+            formatLocalDateToString(dateNow().minusDays(3), FormatStyle.MEDIUM));
 
-        CaseDetails caseDetails = buildCaseDetails(data);
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(buildCaseDetails(data));
+        Map<String, Object> responseData = callbackResponse.getData();
+        CaseData caseData = mapper.convertValue(responseData, CaseData.class);
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
+        assertThat(getHearingDates(caseData.getCmoHearingDateList().getListItems())).isEqualTo(expected);
 
-        assertThat(getHearingDates(callbackResponse)).isEqualTo(expected);
-        assertThat(getHearingDates(callbackResponse)).doesNotContain(TODAYS_DATE.format(dateTimeFormatter));
+        assertThat(responseData.get("respondents_label"))
+            .isEqualTo("Respondent 1 - Timothy Jones\nRespondent 2 - Sarah Simpson\n");
 
-        assertThat(callbackResponse.getData().get("respondents_label")).isEqualTo(
-            "Respondent 1 - Timothy Jones\nRespondent 2 - Sarah Simpson\n");
+        assertThat(responseData.get("others_label"))
+            .isEqualTo("Person 1 - Kyle Stafford\nOther person 1 - Sarah Simpson\n");
 
-        assertThat(callbackResponse.getData().get("others_label")).isEqualTo(
-            "Person 1 - Kyle Stafford\nOther person 1 - Sarah Simpson\n");
+        assertThat(responseData.get("recitals")).asList().isEmpty();
+        assertThat(responseData).doesNotContainKeys("schedule", "orderAction");
+    }
 
-        assertThat(callbackResponse.getData()).doesNotContainKey("allPartiesCustom");
-        assertThat(callbackResponse.getData()).doesNotContainKey("localAuthorityDirectionsCustom");
-        assertThat(callbackResponse.getData()).doesNotContainKey("cafcassDirectionsCustom");
-        assertThat(callbackResponse.getData()).doesNotContainKey("courtDirectionsCustom");
-        assertThat(callbackResponse.getData()).doesNotContainKey("respondentDirectionsCustom");
-        assertThat(callbackResponse.getData()).doesNotContainKey("otherPartiesDirectionsCustom");
+    @Test
+    void aboutToStartCallbackShouldAddCCDFieldsWhenCaseManagementOrderIsNotNull() {
+        Schedule schedule = Schedule.builder().includeSchedule("Yes").build();
+        List<Element<Recital>> recitals = wrapElements(Recital.builder().title("title").build());
+        OrderAction action = OrderAction.builder().type(ActionType.SELF_REVIEW).build();
+        Direction direction = Direction.builder().assignee(ALL_PARTIES).directionType("title").build();
+        List<Element<Direction>> directions = wrapElements(direction);
+
+        CaseManagementOrder order = CaseManagementOrder.builder()
+            .schedule(schedule)
+            .recitals(recitals)
+            .action(action)
+            .directions(directions)
+            .build();
+
+        Map<String, Object> data = Map.of(
+            HEARING_DETAILS_KEY, createHearingBookingsFromInitialDate(now()),
+            "respondents1", createRespondents(),
+            "others", createOthers(),
+            CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey(), order);
+
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(buildCaseDetails(data));
+        CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
+
+        assertThat(caseData.getSchedule()).isEqualTo(schedule);
+        assertThat(caseData.getRecitals()).isEqualTo(recitals);
+        assertThat(caseData.getOrderAction()).isEqualTo(action);
+        assertThat(caseData.getDirectionsForCaseManagementOrder()).isEqualTo(directionsForAllParties(directions));
     }
 
     @Test
     void midEventShouldGenerateDraftCaseManagementOrderDocument() {
         byte[] pdf = {1, 2, 3, 4, 5};
-        final Document document = document();
-        final DocmosisDocument docmosisDocument = new DocmosisDocument("case-management-order.pdf", pdf);
+        DocmosisDocument docmosisDocument = new DocmosisDocument("case-management-order.pdf", pdf);
 
-        given(documentGeneratorService.generateDocmosisDocument(any(), any())).willReturn(docmosisDocument);
-        given(uploadDocumentService.uploadPDF(any(), any(), any(), any())).willReturn(document);
+        given(generatorService.generateDocmosisDocument(captor.capture(), any())).willReturn(docmosisDocument);
+        given(uploadService.uploadPDF(any(), any())).willReturn(document());
 
-        CaseDetails caseDetails = buildCaseDetails(emptyMap());
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(getCaseDetails());
 
-        AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(caseDetails);
+        verify(uploadService).uploadPDF(pdf, DRAFT_CMO_FILE_NAME);
 
-        verify(uploadDocumentService).uploadPDF(userId, userAuthToken, pdf, "draft-case-management-order.pdf");
-
-        final Map<String, Object> responseCaseData = callbackResponse.getData();
-
-        assertThat(responseCaseData).containsKey(CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey());
-
-        final CaseManagementOrder caseManagementOrder = mapper.convertValue(responseCaseData.get(
-            CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey()), CaseManagementOrder.class);
-
-        assertThat(caseManagementOrder.getOrderDoc()).isEqualTo(
-            DocumentReference.builder()
-                .binaryUrl(document().links.binary.href)
-                .filename(document().originalDocumentName)
-                .url(document().links.self.href)
-                .build());
+        assertThat(callbackResponse.getData()).containsKey(CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey());
+        assertThat(getDocumentReference(callbackResponse)).isEqualTo(expectedDocument());
+        assertThat(captor.getValue()).isEqualToComparingFieldByField(expectedTemplateData());
     }
 
     @Test
     void aboutToSubmitShouldPopulateCaseManagementOrder() {
-        List<Element<HearingBooking>> hearingDetails = createHearingBookings(TODAYS_DATE);
-
-        DynamicList dynamicHearingDates = draftCMOService.buildDynamicListFromHearingDetails(hearingDetails);
-
-        dynamicHearingDates.setValue(DynamicListElement.builder()
-            .code(fromString("b15eb00f-e151-47f2-8e5f-374cc6fc2657"))
-            .label(TODAYS_DATE.plusDays(5).toString())
-            .build());
-
-        Map<String, Object> data = new HashMap<>();
-
-        Stream.of(DirectionAssignee.values()).forEach(direction ->
-            data.put(direction.toCustomDirectionField(), createElementCollection(createUnassignedDirection()))
-        );
-
-
-        data.put(HEARING_DATE_LIST.getKey(), dynamicHearingDates);
-        data.put(CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey(), CaseManagementOrder.builder()
-            .orderDoc(DocumentReference.builder().filename("draft-case-management-order.pdf").build())
-            .status(SELF_REVIEW)
-            .action(OrderAction.builder().changeRequestedByJudge("Changes").build())
-            .build());
-
-        CaseDetails caseDetails = buildCaseDetails(data);
+        CaseDetails caseDetails = prepareCaseDetailsForAboutToSubmit();
 
         AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToSubmitEvent(caseDetails);
         CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
@@ -179,58 +180,239 @@ class DraftCMOControllerTest extends AbstractControllerTest {
 
         assertThat(caseManagementOrder.getDirections()).containsAll(createCmoDirections());
         assertThat(caseManagementOrder.getId()).isEqualTo(fromString("b15eb00f-e151-47f2-8e5f-374cc6fc2657"));
-        assertThat(caseManagementOrder.getHearingDate()).isEqualTo(TODAYS_DATE.plusDays(5).toString());
+        assertThat(caseManagementOrder.getHearingDate()).isEqualTo(formatLocalDateToMediumStyle(5));
         assertThat(caseManagementOrder.getStatus()).isEqualTo(SELF_REVIEW);
-        assertThat(caseManagementOrder.getOrderDoc().getFilename()).isEqualTo("draft-case-management-order.pdf");
+        assertThat(caseManagementOrder.getOrderDoc().getFilename()).isEqualTo(DRAFT_CMO_FILE_NAME);
         assertThat(caseManagementOrder.getAction().getChangeRequestedByJudge()).isEqualTo("Changes");
     }
 
-    //TODO: caseDetails before is in this test as a start for conditional call to submitted code.
     @Test
     void submittedShouldTriggerCMOProgressionEvent() {
-        String event = "internal-change:CMO_PROGRESSION";
-        CallbackRequest request = CallbackRequest.builder()
-            .caseDetails(CaseDetails.builder()
-                .id(ID)
-                .jurisdiction(JURISDICTION)
-                .caseTypeId(CASE_TYPE)
-                .data(ImmutableMap.of(
-                    CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey(),
-                    CaseManagementOrder.builder().status(SELF_REVIEW).build()))
-                .build())
-            .caseDetailsBefore(CaseDetails.builder()
-                .id(ID)
-                .jurisdiction(JURISDICTION)
-                .caseTypeId(CASE_TYPE)
-                .data(ImmutableMap.of(
-                    CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey(),
-                    CaseManagementOrder.builder().status(PARTIES_REVIEW).build()))
-                .build())
-            .build();
+        postSubmittedEvent(buildSubmittedRequest());
 
-        postSubmittedEvent(request);
-
-        verify(coreCaseDataService).triggerEvent(JURISDICTION, CASE_TYPE, ID, event);
+        verify(coreCaseDataService).triggerEvent(JURISDICTION, CASE_TYPE, CASE_ID, "internal-change-CMO_PROGRESSION");
     }
 
-    private List<String> getHearingDates(AboutToStartOrSubmitCallbackResponse callbackResponse) {
-        Map<String, Object> cmoHearingResponse = mapper.convertValue(
-            callbackResponse.getData().get(HEARING_DATE_LIST.getKey()), Map.class);
-
-        List<Map<String, Object>> listItemMap = mapper.convertValue(cmoHearingResponse.get("list_items"), List.class);
-
-        return listItemMap.stream()
-            .map(element -> mapper.convertValue(element, DynamicListElement.class))
-            .map(DynamicListElement::getLabel).collect(Collectors.toList());
+    private List<String> getHearingDates(List<DynamicListElement> dynamicListElements) {
+        return dynamicListElements.stream().map(DynamicListElement::getLabel).collect(Collectors.toList());
     }
 
-    private CaseDetails buildCaseDetails(final Map<String, Object> data) {
+    private CaseDetails buildCaseDetails(Map<String, Object> data) {
         return CaseDetails.builder()
-            .id(ID)
+            .id(CASE_ID)
             .jurisdiction(JURISDICTION)
             .caseTypeId(CASE_TYPE)
             .data(data)
             .build();
     }
 
+    private CaseDetails getCaseDetails() {
+        CaseDetails caseDetails = populatedCaseDetails();
+
+        caseDetails.getData().put("cmoHearingDateList", DynamicList.builder()
+            .value(DynamicListElement.builder().code(UUID.fromString("51d02c7f-2a51-424b-b299-a90b98bb1774")).build())
+            .build());
+
+        caseDetails.getData().put("recitals", wrapElements(Recital.builder()
+            .title("example recital")
+            .description("description")
+            .build()));
+
+        caseDetails.getData().put("allPartiesCustomCMO", wrapElements(Direction.builder()
+            .directionType("Example title")
+            .directionText("Example text")
+            .dateToBeCompletedBy(LocalDateTime.of(2099, 1, 1, 10, 0, 0))
+            .build()));
+
+        caseDetails.getData().put("allocatedJudge", testJudge());
+
+        caseDetails.getData().put(CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey(),
+            CaseManagementOrder.builder().build());
+
+        caseDetails.getData().put("dateOfIssue", dateNow());
+
+        return caseDetails;
+    }
+
+    private DocmosisCaseManagementOrder expectedTemplateData() {
+        return DocmosisCaseManagementOrder.builder()
+            .familyManCaseNumber("12345")
+            .courtName("Family Court")
+            .judgeAndLegalAdvisor(expectedJudgeAndLegalAdvisor())
+            .allocatedJudge(testDocmosisJudge())
+            .dateOfIssue(formatLocalDateToString(dateNow(), FormatStyle.LONG))
+            .complianceDeadline("18 September 2020")
+            .representatives(expectedRepresentatives())
+            .respondents(expectedRespondents())
+            .respondentsProvided(true)
+            .children(expectedChildren())
+            .applicantName("London Borough of Southwark")
+            .hearingBooking(expectedHearing())
+            .crest("[userImage:crest.png]")
+            .draftbackground("[userImage:draft-watermark.png]")
+            .recitals(expectedRecitals())
+            .recitalsProvided(true)
+            .directions(expectedDirections())
+            .build();
+    }
+
+    private List<DocmosisDirection> expectedDirections() {
+        return List.of(DocmosisDirection.builder()
+            .assignee(ALL_PARTIES)
+            .title("2. Example title by 10:00am, 1 January 2099")
+            .body("Example text")
+            .build());
+    }
+
+    private List<DocmosisRecital> expectedRecitals() {
+        return List.of(DocmosisRecital.builder()
+            .title("example recital")
+            .body("description")
+            .build());
+    }
+
+    private DocmosisHearingBooking expectedHearing() {
+        String willAppearOnIssuedCMO = "This will appear on the issued CMO";
+
+        return DocmosisHearingBooking.builder()
+            .hearingDate(willAppearOnIssuedCMO)
+            .hearingVenue(willAppearOnIssuedCMO)
+            .preHearingAttendance(willAppearOnIssuedCMO)
+            .hearingTime(willAppearOnIssuedCMO)
+            .build();
+    }
+
+    private List<DocmosisChild> expectedChildren() {
+        return List.of(
+            DocmosisChild.builder()
+                .name("Tom Reeves")
+                .gender("Boy")
+                .dateOfBirth("15 June 2018")
+                .build(),
+            DocmosisChild.builder()
+                .name("Sarah Reeves")
+                .gender("Girl")
+                .dateOfBirth("2 February 2002")
+                .build());
+    }
+
+    private List<DocmosisRespondent> expectedRespondents() {
+        return List.of(
+            DocmosisRespondent.builder()
+                .name("Paul Smith")
+                .relationshipToChild("Uncle")
+                .build(),
+            DocmosisRespondent.builder()
+                .name("James Smith")
+                .relationshipToChild("Brother")
+                .build(),
+            DocmosisRespondent.builder()
+                .name("An Other")
+                .relationshipToChild("Cousin")
+                .build());
+    }
+
+    private DocmosisJudgeAndLegalAdvisor expectedJudgeAndLegalAdvisor() {
+        return DocmosisJudgeAndLegalAdvisor.builder()
+            .judgeTitleAndName("His Honour Judge Walker")
+            .legalAdvisorName("John Smith")
+            .build();
+    }
+
+    private List<DocmosisRepresentative> expectedRepresentatives() {
+        return List.of(DocmosisRepresentative.builder()
+            .name("London Borough of Southwark")
+            .representedBy(List.of(DocmosisRepresentedBy.builder()
+                .name("Brian Banks")
+                .email("brian@banks.com")
+                .phoneNumber("020 2772 5772")
+                .build()))
+            .build());
+    }
+
+    private DocumentReference expectedDocument() {
+        Document document = document();
+
+        return DocumentReference.builder()
+            .binaryUrl(document.links.binary.href)
+            .filename(document.originalDocumentName)
+            .url(document.links.self.href)
+            .build();
+    }
+
+    private DocumentReference getDocumentReference(AboutToStartOrSubmitCallbackResponse callbackResponse) {
+        Map<String, Object> responseCaseData = callbackResponse.getData();
+
+        return mapper.convertValue(responseCaseData.get(
+            CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey()), CaseManagementOrder.class).getOrderDoc();
+    }
+
+    private CaseDetails prepareCaseDetailsForAboutToSubmit() {
+        Map<String, Object> data = new HashMap<>();
+
+        Stream.of(DirectionAssignee.values()).forEach(assignee ->
+            data.put(assignee.toCaseManagementOrderDirectionField(), wrapElements(createUnassignedDirection()))
+        );
+
+        data.put(HEARING_DATE_LIST.getKey(), getDynamicList());
+        data.put(CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey(), CaseManagementOrder.builder()
+            .orderDoc(DocumentReference.builder().filename(DRAFT_CMO_FILE_NAME).build())
+            .status(SELF_REVIEW)
+            .action(OrderAction.builder().changeRequestedByJudge("Changes").build())
+            .build());
+
+        return buildCaseDetails(data);
+    }
+
+    private DynamicList getDynamicList() {
+        DynamicListElement listElement = DynamicListElement.builder()
+            .label(formatLocalDateToMediumStyle(5))
+            .code(fromString("b15eb00f-e151-47f2-8e5f-374cc6fc2657"))
+            .build();
+
+        return DynamicList.builder()
+            .listItems(List.of(
+                DynamicListElement.builder()
+                    .code(fromString("b15eb00f-e151-47f2-8e5f-374cc6fc2657"))
+                    .label(formatLocalDateToMediumStyle(5))
+                    .build(),
+                DynamicListElement.builder()
+                    .code(fromString("6b3ee98f-acff-4b64-bb00-cc3db02a24b2"))
+                    .label(formatLocalDateToMediumStyle(2))
+                    .build(),
+                DynamicListElement.builder()
+                    .code(fromString("ecac3668-8fa6-4ba0-8894-2114601a3e31"))
+                    .label(formatLocalDateToMediumStyle(0))
+                    .build()))
+            .value(listElement)
+            .build();
+    }
+
+    private CallbackRequest buildSubmittedRequest() {
+        CaseManagementOrder order = CaseManagementOrder.builder().status(SELF_REVIEW).build();
+
+        return CallbackRequest.builder()
+            .caseDetails(CaseDetails.builder()
+                .id(CASE_ID)
+                .jurisdiction(JURISDICTION)
+                .caseTypeId(CASE_TYPE)
+                .data(Map.of(CASE_MANAGEMENT_ORDER_LOCAL_AUTHORITY.getKey(), order))
+                .build())
+            .build();
+    }
+
+    private String formatLocalDateToMediumStyle(int i) {
+        return formatLocalDateToString(dateNow().plusDays(i), FormatStyle.MEDIUM);
+    }
+
+    private Directions directionsForAllParties(List<Element<Direction>> directions) {
+        return Directions.builder()
+            .allPartiesCustomCMO(directions)
+            .localAuthorityDirectionsCustomCMO(emptyList())
+            .cafcassDirectionsCustomCMO(emptyList())
+            .courtDirectionsCustomCMO(emptyList())
+            .otherPartiesDirectionsCustomCMO(emptyList())
+            .respondentDirectionsCustomCMO(emptyList())
+            .build();
+    }
 }
